# prumpt

./: Cargo.toml  README.md
src/: lib.rs  ollama.rs  openai.rs
